scroll to cursor and fix scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,6 @@ ul li {
     width: 100%;
     overflow: auto;
     height: 400px;
-    padding: 1rem;
     font-size: 12pt;
 }
 
